# CodeReader

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.mjs  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  release_feedback.yml
.github/workflows/: quality.yml  release.yml  security.yml
archive/: README.md
archive/for VS Code Extension/: ARCHIVE.md  README.md  技术架构与技术路线.md
doc for app/: MVP发行与验收.md  MVP实现标准.md  README.md  变更说明_v0.3.md  启动前检查报告_v0.4.md
docs/: README.md
docs/architecture/: 2026-07-07-open-source-release-design.md  2026-07-12-glib-0-18-security-backport.md  2026-07-12-production-recovery-and-release-evidence.md
docs/history/: README.md  version-history.zh-CN.md
docs/history/app-mvp/: README.md  产品设计文档.md  协议与治理.md  变更说明_v0.2.md  技术架构与技术路线.md  需求文档.md
docs/history/beta/: Beta2验收.md  Beta4任务书.md  Beta4真实项目验证.md  Beta4验收.md  GLM-5.1审查处置.md  Opus-4.8审查处置.md  内测反馈与回归清单.md  内测质量基线.md  架构入口.md  迭代路线图.md
docs/history/legacy-planning/: CodeReader_MVP开发任务Prompt_v0.4.md  (+2 more)
docs/release/: github-release.md  post-release-monitoring.md  public-release-notes.zh-CN.md
examples/small/: explanations.sample.json  login-controller.ts  user-store.ts
scripts/: build.mjs  cargo-check.ps1  cargo-clippy.ps1  cargo-test.ps1  cargo.mjs  check-environment.mjs  configure-windows-rust.ps1  dev.mjs  format.mjs  generate-icons.ps1  lint.mjs  linux-desktop-smoke.mjs  linux-desktop-smoke.test.mjs  linux-dev-doctor.mjs  linux-dev-doctor.test.mjs  linux-package-smoke.mjs  linux-package-smoke.test.mjs  linux-window-smoke.sh  public-documentation.test.mjs  release-assets.mjs  release-assets.test.mjs  release-evidence.mjs  release-evidence.test.mjs  release-linux.mjs  release-linux.test.mjs  release-windows.ps1  release-workflow.test.mjs  repair-native-deps.mjs  sign-windows-artifacts.ps1  tauri.mjs  test.mjs  verify-authenticode.mjs  verify-authenticode.test.mjs  verify-linux-dev.mjs  verify-linux-dev.test.mjs  windows-package-smoke.ps1  windows-release-smoke.mjs  windows-release-smoke.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_error.rs  change_detection.rs  code_service.rs  context_builder.rs  explanation_service.rs  file_authority.rs  lib.rs  llm_provider.rs  main.rs  persistence_service.rs  project_guidance.rs  update_check.rs  utils.rs
src-tauri/src/code_service/: language.rs  wsl_paths.rs
src-tauri/src/context_builder/: budget.rs  static_analysis.rs
src-tauri/src/persistence/: change_tracking.rs  explanation_hydration.rs  model_config.rs  prompt_registry.rs  schema.rs  user_activity.rs
src-tauri/tests/fixtures/persistence/: v0_10.sql  v0_11_current.sql  v0_11_early.sql
src/app/: App.test.tsx  App.tsx  appError.test.ts  appError.ts  copy.test.ts  copy.ts  styles.css
src/data/: sampleProject.ts  sampleWorkspace.test.ts  sampleWorkspace.ts  syntheticProjectFixtures.test.ts  syntheticProjectFixtures.ts
src/services/: desktopWorkspace.ts
src/types/: explanation.ts
内测阶段文档/: Beta3-prep-linux.md  Beta4任务书.md  Beta4真实项目验证.md  Beta4验收.md  GLM-5.1审查处置.md  Opus-4.8审查处置.md  README.md  Windows-release-chain-smoke.md  内测反馈与回归清单.md  内测质量基线.md  发布签名与安全门禁.md  迭代路线图.md
完善文档与prompt整理/: CodeReader_MVP开发任务Prompt_v0.3.md  CodeReader_MVP开发任务Prompt_v0.4.md  git管理文档.md  启动前约束与检查.md
(+68 files in other folders)
