[package]
name = "codereader"
version = "0.1.0"
description = "CodeReader desktop app"
authors = ["CodeReader"]
edition = "2021"

[lib]
name = "codereader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
tokio = { version = "1.52.0", features = ["rt-multi-thread"] }
