[package]
name = "codereader"
version = "1.0.0-rc.1"
description = "Independent desktop IDE for persistent, structured code reading"
authors = ["CodeReader contributors"]
edition = "2021"

[lib]
name = "codereader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.27"
sha2 = "0.11.0"
similar = "2.7.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.0", features = ["rt-multi-thread"] }
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[patch.crates-io]
# Tauri 2.11's GTK3 stack is constrained to glib 0.18. This immutable,
# upstream-derived source patch fixes VariantStrIter soundness until Tauri
# migrates the Linux GTK dependency chain to glib >= 0.20.
glib = { git = "https://github.com/lrk7353-arch/gtk-rs-core-security", rev = "a10fcaacb24c29b7199f97bdfbe682b8f101bb86" }
glib-sys = { git = "https://github.com/lrk7353-arch/gtk-rs-core-security", rev = "a10fcaacb24c29b7199f97bdfbe682b8f101bb86" }
gobject-sys = { git = "https://github.com/lrk7353-arch/gtk-rs-core-security", rev = "a10fcaacb24c29b7199f97bdfbe682b8f101bb86" }
gio-sys = { git = "https://github.com/lrk7353-arch/gtk-rs-core-security", rev = "a10fcaacb24c29b7199f97bdfbe682b8f101bb86" }
glib-macros = { git = "https://github.com/lrk7353-arch/gtk-rs-core-security", rev = "a10fcaacb24c29b7199f97bdfbe682b8f101bb86" }
